crates/config/tests/snapshots/directive_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# directive-at-eof

## Input

```mical
#version 1.0
```

## JSON

```json
{}
```

vim:ft=markdown
