crates/config/tests/snapshots/directive_basic.snap
---
source: crates/config/tests/snapshots.rs
---
# directive-basic

## Input

```mical
#include path/to/file
#schema https://example.com/schema.json
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
