crates/config/tests/snapshots/directive_in_prefix_block.snap
---
source: crates/config/tests/snapshots.rs
---
# directive-in-prefix-block

## Input

```mical
s {
#version 1
  k v
}

```

## JSON

```json
{
  "sk": "v"
}
```

vim:ft=markdown
