crates/config/tests/snapshots/directive_no_args.snap
---
source: crates/config/tests/snapshots.rs
---
# directive-no-args

## Input

```mical
#strict
a 1

```

## JSON

```json
{
  "a": 1
}
```

vim:ft=markdown
