crates/config/tests/snapshots/directive_shebang_style.snap
---
source: crates/config/tests/snapshots.rs
---
# directive-shebang-style

## Input

```mical
#!/usr/bin/env mical
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
