crates/config/tests/snapshots/duplicate_keys.snap
---
source: crates/config/tests/snapshots.rs
---
# duplicate_keys

## Input

```mical
tag web
tag server
tag production

```

## Json

```json
{
  "tag": [
    "web",
    "server",
    "production"
  ]
}
```

vim:ft=markdown
