crates/config/tests/snapshots/duplicate_keys_three_sources.snap
---
source: crates/config/tests/snapshots.rs
---
# duplicate-keys-three-sources

## Input

```mical
a. {
  b 1
}
a.b 2
a. {
  b 3
}

```

## JSON

```json
{
  "a.b": [
    1,
    2,
    3
  ]
}
```

vim:ft=markdown
