crates/config/tests/snapshots/duplicate_keys_with_prefix.snap
---
source: crates/config/tests/snapshots.rs
---
# duplicate-keys-with-prefix

## Input

```mical
s {
  k from-block
}
sk from-top

```

## JSON

```json
{
  "sk": [
    "from-block",
    "from-top"
  ]
}
```

vim:ft=markdown
