crates/config/tests/snapshots/empty.snap
---
source: crates/config/tests/snapshots.rs
---
# empty

## Input

```mical

```

## JSON

```json
{}
```

vim:ft=markdown
