crates/config/tests/snapshots/eof_line_string.snap
---
source: crates/config/tests/snapshots.rs
---
# eof-line-string

## Input

```mical
key hello world
```

## JSON

```json
{
  "key": "hello world"
}
```

vim:ft=markdown
